--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <textarea id="output" style="width:100%; height:150px;" placeholder="Result..."></textarea><br/>
   <button id="downloadBtn">Download Output</button>
 
-  <script src="converter.js"></script>
+  <script src="convert.js"></script>
   <script>
     const gmaFile = document.getElementById('gmaFile');
     const gmaInput = document.getElementById('gmaInput');
