--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Welcome to Grandma Version 1.5</title>
-  </head>
-  <body>
-    <h1>Here you will find all the resources to code with Grandma 1.5</h1>
-    <br>
-    <button href="converter/">Converter</button><button href="grandmaFiles">Test Files</button><button href="editor">Editor</button>
-  </body>
+<head>
+  <title>Welcome to Grandma Version 1.5</title>
+  <style>
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    h1 { font-size: 1.5em; }
+    .btn {
+      display: inline-block;
+      padding: 10px 20px;
+      margin: 5px;
+      font-size: 1rem;
+      text-decoration: none;
+      color: #fff;
+      background-color: #007BFF;
+      border-radius: 5px;
+    }
+    .btn:hover {
+      background-color: #0056b3;
+    }
+  </style>
+</head>
+<body>
+  <h1>Here you will find all the resources to code with Grandma 1.5</h1>
+  <br>
+  <a class="btn" href="converter/">Converter</a>
+  <a class="btn" href="grandmaFiles/">Test Files</a>
+  <a class="btn" href="editor/">Editor</a>
+</body>
 </html>
