--- a/converter/index.html
+++ b/converter/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <h2>👵 Grandma Converter Demo</h2>
+  <h2><a href="/index.html">👵</a> Grandma Converter</h2>
 
   <input type="file" id="gmaFile" accept=".gma"><br/>
   <textarea id="gmaInput" style="width:100%; height:150px;" placeholder="Grandma code will appear here..."></textarea><br/>
