--- a/editor/index.html
+++ b/editor/index.html
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-  <h2>👵 Grandma Editor</h2>
+  <h2><a href="/index.html">👵</a> Grandma Editor</h2>
   <input type="file" id="gmaFile" accept=".gma"><br/>
   <textarea id="gmaEditor" placeholder="Edit .gma code here..."></textarea><br/>
   <button id="download">Save to device</button>
