--- a/grandmaFiles/index.html
+++ b/grandmaFiles/index.html
@@ -20,7 +20,7 @@
 <body>
   <h1>👵 Grandma .gma Examples</h1>
   <div class="files">
-    <a href="grandmaFiles/test.html.gma" download>example1.gma</a>
+    <a href="/grandma/grandmaFiles/test.html.gma" download>example1.gma</a>
     <!-- 👇 Add more files here as needed -->
   </div>
 </body>
