--- a/editor/index.html
+++ b/editor/index.html
@@ -3,106 +3,23 @@
 <head>
   <title>Grandma Editor</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    .editor-container {
-      position: relative;
-      border: 1px solid #ccc;
-      font-family: monospace;
-      font-size: 14px;
-      line-height: 1.4;
-    }
-    #highlighting {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      pointer-events: none;
-      white-space: pre;
-      padding: 10px;
-      color: #000;
-      tab-size: 2;
-    }
-    #gmaEditor {
-      position: relative;
-      width: 100%;
-      height: 300px;
-      padding: 10px;
-      border: none;
-      background: none;
-      font: inherit;
-      resize: none;
-      color: transparent;
-      caret-color: black;
-      line-height: 1.4;
-      z-index: 1;
-      overflow: auto;
-      white-space: pre;
-      tab-size: 2;
-    }
-    .keyword {
-      color: #007BFF;
-      font-weight: bold;
-    }
-    .string {
-      color: #28A745;
-    }
-    .error {
-      color: #FF0000;
-      font-weight: bold;
-    }
-    button, input[type="file"] {
-      margin: 10px 0;
-    }
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    #gmaEditor { width: 100%; height: 300px; font-family: monospace; }
+    button, input[type="file"] { margin: 10px 0; }
   </style>
 </head>
 <body>
   <h2><a href="/grandma/index.html">👵</a> Grandma Editor</h2>
   <input type="file" id="gmaFile" accept=".gma"><br/>
-  <div class="editor-container">
-    <div id="highlighting"></div>
-    <textarea id="gmaEditor" placeholder="Edit .gma code here..."></textarea>
-  </div>
-  <br/>
+  <textarea id="gmaEditor" placeholder="Edit .gma code here..."></textarea><br/>
   <button id="download">Save to device</button>
 
   <script>
     const gmaFile = document.getElementById('gmaFile');
     const gmaEditor = document.getElementById('gmaEditor');
-    const highlighting = document.getElementById('highlighting');
     const downloadButton = document.getElementById('download');
 
-    const KEYWORDS = ["Header", "Text", "Button", "PageName", "Space", "Rule", "Log"];
-    const keywordPattern = new RegExp("\\b(" + KEYWORDS.join("|") + ")\\b", "g");
-
-    function highlight(content) {
-      return content
-        .split('\n')
-        .map(line => {
-            if (!line.trim()) return '';
-            const firstWord = line.trim().split(/\s+/)[0];
-            let html = line
-              .replace(keywordPattern, '<span class="keyword">$1</span>')
-              .replace(/"([^"]*)"/g, '<span class="string">"$1"</span>');
-            // Mark error if first word isn't keyword or "Grandma"
-            if (!KEYWORDS.includes(firstWord) && !line.startsWith("Grandma")) {
-              html = '<span class="error">' + html + '</span>';
-            }
-            return html;
-        }).join('\n');
-    }
-
-    gmaEditor.addEventListener('input', () => {
-      highlighting.innerHTML = highlight(gmaEditor.value);
-    });
-    gmaEditor.addEventListener('scroll', () => {
-      highlighting.scrollTop = gmaEditor.scrollTop;
-      highlighting.scrollLeft = gmaEditor.scrollLeft;
-    });
-
+    // Load .gma file
     gmaFile.addEventListener('change', async (e) => {
       const file = e.target.files[0];
       if (!file) return;
@@ -111,11 +28,12 @@
         alert("Please select a .gma file.");
         return;
       }
+
       const text = await file.text();
       gmaEditor.value = text;
-      highlighting.innerHTML = highlight(text);
     });
 
+    // Save .gma file
     downloadButton.addEventListener('click', () => {
       const text = gmaEditor.value;
       if (!text.trim()) {
